Add --enable-preview jdk option